# git-dit-web

./: Cargo.toml  README.md
git_dit_web/: Cargo.toml
git_dit_web/src/: error.rs  main.rs
git_dit_web/src/system/: iron_error.rs  programs.rs
git_dit_web/src/webutil/: iron_handlers.rs  mod.rs  tags.rs  util.rs  write.rs
git_dit_web/src/webutil/templates/base_templates/: header.hbs  navbar.hbs  sidenav.hbs
git_dit_web/src/webutil/templates/css/: format.css
git_dit_web/src/webutil/templates/forms/: submitMessage.hbs
git_dit_web/src/webutil/templates/lists/: issue_list.hbs  submit_reply.hbs
git_dit_web/src/webutil/templates/util/: assign_tag.hbs
src/: error.rs  filters.rs  main.rs
src/gitext/: callbacks.rs  mod.rs  reference.rs
src/system/: abort.rs  hinweis  iron_error.rs  logger.rs  mod.rs  programs.rs  write.rs
src/webutil/: cat_files.rs  git_info.rs  iron_handlers.rs  tags.rs  util.rs  write.rs
src/webutil/templates/base_templates/: index.hbs
src/webutil/templates/forms/: reply.hbs  submitIssue.hbs
src/webutil/templates/lists/: documentation.txt  info_list.hbs  show_issue.hbs  show_issue_tree.hbs
