[package]
name    = "git-dit-web"
version = "0.1.0"
authors = ["Senkor <timseinacc@gmail.com>"]


[dependencies]
chrono          = "*"
clap            = "*"
docopt          = "*"
env_logger      = "^0.3.2"
error-chain     = "*"
git2            = "*"
handlebars      = "^0.26.0"
handlebars-iron = "^0.24.0"
iron            = "0.5.0"
is-match        = "*"
lazy_static     = "1.0.0"
libgitdit       = "*"
log             = "^0.3"
maplit          = "^0.1.3"
mount           = "0.3.0"
notify          = { version = "^4.0", optional = true }
params          = "^0.7.1"
plugin          = "^0.2.6"
regex           = "*"
router          = "0.5.0"
serde           = "^1.0.0"
serde_derive    = "^1.0.0"
serde_json      = "^1.0.0"
staticfile      = "*"
time            = "^0.1"
url             = "1.1"
urlencoded      = "^0.5.0"
walkdir         = "^1.0"

[dependencies.filetime]
version  = "0.1"
optional = true

[features]
watch = ["notify"]

