[package]
name    = "git-dit-web"
version = "0.1.0"
authors = ["Senkor <timseinacc@gmail.com>"]


[dependencies]
chrono          = "0.4"
clap            = "2"
env_logger      = "0.3"
error-chain     = "0.11"
git2            = "0.6"
handlebars      = "0.26"
handlebars-iron = "0.24"
iron            = "0.5"
is-match        = "0.1"
lazy_static     = "1"
libgitdit       = "0.4"
log             = "0.3"
mount           = "0.3.0"
plugin          = "0.2"
regex           = "0.2"
router          = "0.5.0"
serde           = "1"
serde_derive    = "1"
serde_json      = "1"
staticfile      = "0.5"
urlencoded      = "0.5.0"
walkdir         = "1"

[dependencies.filetime]
version  = "0.1"
optional = true

