[package]
name = "git-dit-web"
version = "0.1.0"
authors = ["Senkor <timseinacc@gmail.com>"]


[dependencies]
iron = "0.5.0"
router = "0.5.0"
libgitdit = "*"
git2 = "*"
docopt = "*"
chrono = "*"
error-chain = "*"
log = "^0.3"
regex = "*"
is-match = "*"
lazy_static = "1.0.0"

mount = "0.3.0"
staticfile = "*"

params = "^0.7.1"

urlencoded = "^0.5.0"
handlebars-iron = "^0.24.0"
handlebars = "^0.26.0"
serde = "^1.0.0"
serde_json = "^1.0.0"
plugin = "^0.2.6"
notify = { version = "^4.0", optional = true }
walkdir = "^1.0"
env_logger = "^0.3.2"

serde_derive = "^1.0.0"
maplit = "^0.1.3"
clap = "*"

time = "^0.1"
url = "1.1"

[dependencies.filetime]
version = "0.1"
optional = true

[features]
watch = ["notify"]
